--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,13 @@ h1 {
     color: #333;
 }
 
+h3 {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 1.7em;
+    color: #707070;
+}
+
 p {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 1em;
@@ -59,6 +66,22 @@ footer {
 
   .main-img {
       padding-left: 5em;
+      padding-bottom: 2em;
+      height: 650px;
+  }
+
+  /* banner and text underneath */
+  .lm-banner {
+      width: 55%;
+      padding-left: 5%;
+      align-items: flex-end;
+  }
+
+  .resume {
+    margin-left: 11em;
+    padding-left: 3em;
+    border-left: 2px solid #333;
+    margin-bottom: 2em;
   }
 
   /* main page name */
@@ -69,18 +92,29 @@ footer {
     /* border-bottom: 2px solid #333; */
   }
 
+  /* h1 non-mainpage */
+  .page-title {
+      padding-left: 1.5em;
+  }
+
+  .about {
+      display: flex;
+      flex-wrap: wrap;
+  }
+
   /* flexbox for img and name */
 .row {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
   }
 
   /* is this even right?! Trying to double decker the name and description */
 
 .column {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: flex-end;
-    align-items: flex-start;
+    align-items: flex-end;
   }
